SHIFT+H in Graph Editor doesn't reveal what is selected #42662

Closed
opened 2014-11-20 15:48:55 +01:00 by Hjalti Hjálmarsson · 7 comments

Lets say you have a number of channels in the Graph Editor. Select one of them and do SHIFT+H which hides everything but what is selected. Awesome, that's brilliant.

Problem is, if you then select one of the channels that's hidden and do SHIFT+H it just hides everything and doesn't reveal the channel/channels that are selected. This issue doesn't come up in the viewport since you can't select objects that aren't visible. When working with channels it seems very intuitive to the user that this function should show what ever he/her selected and hide everything else.

In short: SHIFT+H in the Graph Editor should reveal channels that are selected and hide those that aren't selected.

Blender Version
Blender 2.72 Gooseberry Branch

Lets say you have a number of channels in the Graph Editor. Select one of them and do SHIFT+H which hides everything but what is selected. Awesome, that's brilliant. Problem is, if you then select one of the channels that's hidden and do SHIFT+H it just hides everything and doesn't reveal the channel/channels that are selected. This issue doesn't come up in the viewport since you can't select objects that aren't visible. When working with channels it seems very intuitive to the user that this function should show what ever he/her selected and hide everything else. In short: SHIFT+H in the Graph Editor should reveal channels that are selected and hide those that aren't selected. **Blender Version** Blender 2.72 Gooseberry Branch
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti

This issue was referenced by 0facc48308

This issue was referenced by 0facc483086c28841e31b3052443103254f4c775

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0facc48308.

Closed by commit 0facc48308.

This issue was referenced by 157e6ef22df00af72cbd9d7ebc377cb27e2db47c

This issue was referenced by 157e6ef22df00af72cbd9d7ebc377cb27e2db47c

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42662
No description provided.