Fix T42662 hide unselected does not reveal selected.

Not sure if this is a bugfix exactly but should help the gooseberry team
with their workflow.